[gd_scene load_steps=45 format=3 uid="uid://boxovuoea2l3c"]

[ext_resource type="Texture2D" uid="uid://n6svxyfwfaav" path="res://assets/OPCutscene/open_cutscene-spritesheet.png" id="1_3xqbf"]
[ext_resource type="Script" path="res://scripts/open_cutscene.gd" id="1_qng6x"]
[ext_resource type="Texture2D" uid="uid://cq5ur22bmxo48" path="res://assets/OPCutscene/open_cutscene-box_close.png" id="2_dgh7s"]
[ext_resource type="Texture2D" uid="uid://be54ho63uagu7" path="res://assets/Binder/btn/binder_arrow_right-hover.png" id="3_mcrvo"]
[ext_resource type="Texture2D" uid="uid://duo5fpkhciim2" path="res://assets/OPCutscene/open_cutscene-box_open.png" id="3_s8gwx"]
[ext_resource type="Texture2D" uid="uid://dqy3hntu7w38p" path="res://assets/Binder/btn/binder_arrow_right-press.png" id="4_vtpr6"]
[ext_resource type="Texture2D" uid="uid://d06xb885sug21" path="res://assets/Binder/btn/binder_arrow_right.png" id="5_78lbq"]
[ext_resource type="Texture2D" uid="uid://bov3lbc8vilc6" path="res://assets/OPCutscene/open_cutscene-card.png" id="5_jjskg"]
[ext_resource type="Shader" path="res://scripts/shop.gdshader" id="6_30rfv"]
[ext_resource type="FontFile" uid="uid://bafa8t46i5ktu" path="res://assets/font/ChelseaMarket-Regular.ttf" id="6_v6aif"]
[ext_resource type="Texture2D" uid="uid://bxp51df2bayft" path="res://assets/OPCutscene/open_cutscene-start_btn-pressed.png" id="8_wxrac"]
[ext_resource type="Texture2D" uid="uid://d2hkc4hbo674j" path="res://assets/OPCutscene/open_cutscene-start_btn-hover.png" id="9_mcp14"]
[ext_resource type="Texture2D" uid="uid://bbuftvpqotdjb" path="res://assets/OPCutscene/open_cutscene-start_btn-normal.png" id="10_y4pwl"]

[sub_resource type="Animation" id="Animation_yoar7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OPcutsceneSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OPcutsceneSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OPcard:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OPcard:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OPBoxOpen:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("OPcutsceneSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("OPBoxOpen:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wvnck"]
resource_name = "op_00"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OPcutsceneSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 2.3, 3.3, 3.4, 3.5, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_disable_next_btn"
}, {
"args": [],
"method": &"_eneble_next_btn"
}]
}

[sub_resource type="Animation" id="Animation_1m6ck"]
resource_name = "op_01"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OPcutsceneSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 5.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_disable_next_btn"
}, {
"args": [],
"method": &"_eneble_next_btn"
}, {
"args": [],
"method": &"_finished"
}]
}

[sub_resource type="Animation" id="Animation_4tlcq"]
resource_name = "op_02"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OPcutsceneSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.9, -0.8, 0, 0.3, 3.3, 3.4, 3.5, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_disable_next_btn"
}, {
"args": [],
"method": &"_finished"
}]
}

[sub_resource type="Animation" id="Animation_vvdph"]
resource_name = "op_03"
length = 1.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OPcutsceneSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-1, -0.6, 0, 0.0999999, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_disable_next_btn"
}, {
"args": [],
"method": &"_eneble_next_btn"
}, {
"args": [],
"method": &"_finished"
}]
}

[sub_resource type="Animation" id="Animation_fem3h"]
resource_name = "op_04"
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_disable_next_btn"
}, {
"args": [],
"method": &"_finished"
}, {
"args": [],
"method": &"_eneble_next_btn"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_chang_bg"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OPcutsceneSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OPcard:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OPcard:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1086, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("OPBoxOpen:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("OPcutsceneSprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("OPBoxOpen:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l314r"]
_data = {
"RESET": SubResource("Animation_yoar7"),
"op_00": SubResource("Animation_wvnck"),
"op_01": SubResource("Animation_1m6ck"),
"op_02": SubResource("Animation_4tlcq"),
"op_03": SubResource("Animation_vvdph"),
"op_04": SubResource("Animation_fem3h")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r42wu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fiird"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j6gyv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_42o03"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t5vum"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y2s5a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6s3y8"]
texture = ExtResource("3_mcrvo")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v1jjh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aqqpb"]
texture = ExtResource("4_vtpr6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rgxfw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n84t8"]
texture = ExtResource("5_78lbq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r76gg"]
shader = ExtResource("6_30rfv")
shader_parameter/height = 3.0
shader_parameter/frequency = 5.0
shader_parameter/speed = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_msbko"]
font = ExtResource("6_v6aif")
font_size = 40
font_color = Color(0.925124, 0.541024, 0.734516, 1)
outline_size = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g071q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fsx1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_te4f4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_68354"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jmjjf"]
texture = ExtResource("8_wxrac")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rajkr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vg3ei"]
texture = ExtResource("9_mcp14")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8wxoi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n2ajq"]
texture = ExtResource("8_wxrac")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v0dae"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xl7m4"]
texture = ExtResource("10_y4pwl")

[node name="OpenCutscene" type="Node2D" node_paths=PackedStringArray("open_card")]
script = ExtResource("1_qng6x")
box_close = ExtResource("2_dgh7s")
box_open = ExtResource("3_s8gwx")
open_card = NodePath("OPcard")

[node name="OPcutsceneSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_3xqbf")
centered = false
vframes = 8

[node name="OPBoxOpen" type="Sprite2D" parent="."]
texture = ExtResource("3_s8gwx")
centered = false

[node name="OPcard" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_jjskg")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l314r")
}

[node name="NextBtn" type="Button" parent="."]
custom_minimum_size = Vector2(130, 130)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1126.0
offset_top = 575.0
offset_right = 1256.0
offset_bottom = 705.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_r42wu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fiird")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_j6gyv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_42o03")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_t5vum")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_y2s5a")
theme_override_styles/hover = SubResource("StyleBoxTexture_6s3y8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_v1jjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_aqqpb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rgxfw")
theme_override_styles/normal = SubResource("StyleBoxTexture_n84t8")

[node name="Label" type="Label" parent="."]
material = SubResource("ShaderMaterial_r76gg")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 383.0
offset_top = 160.0
offset_right = 932.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
text = "There are 
26 cards 
in the collection"
label_settings = SubResource("LabelSettings_msbko")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(500, 120)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 395.0
offset_top = 583.0
offset_right = 895.0
offset_bottom = 703.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_g071q")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_2fsx1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_te4f4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_68354")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_jmjjf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_rajkr")
theme_override_styles/hover = SubResource("StyleBoxTexture_vg3ei")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_8wxoi")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n2ajq")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_v0dae")
theme_override_styles/normal = SubResource("StyleBoxTexture_xl7m4")

[connection signal="pressed" from="NextBtn" to="." method="_on_next_btn_pressed"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
